--- a/results.html
+++ b/results.html
@@ -23,6 +23,55 @@
         <p>© 2025 Library Website</p>
     </footer>
 
-    <script src="results.js"></script> <!-- JavaScript for RSS fetching -->
+    <script>
+        // Function to fetch and parse the RSS feed based on the query
+        function fetchRSS(query) {
+            const rssURL = `https://catalog.library.washco.utah.gov/client/rss/hitlist/default/qu=${encodeURIComponent(query)}&te=ILS`;
+            fetch(rssURL)
+                .then(response => response.text())  // Get the RSS feed as text
+                .then(data => {
+                    const parser = new DOMParser();
+                    const xml = parser.parseFromString(data, 'application/xml');
+                    const items = xml.querySelectorAll('item'); // Select all RSS items
+
+                    const resultsContainer = document.getElementById('searchResults');
+                    resultsContainer.innerHTML = '';  // Clear previous results
+
+                    // Display the search query
+                    document.getElementById('searchQueryText').textContent = query;
+
+                    // Loop through each item and display it
+                    items.forEach(item => {
+                        const title = item.querySelector('title').textContent;
+                        const link = item.querySelector('link').textContent;
+                        const description = item.querySelector('description').textContent;
+
+                        // Create a div for each result
+                        const resultDiv = document.createElement('div');
+                        resultDiv.classList.add('result-item');
+                        resultDiv.innerHTML = `
+                            <h3><a href="${link}" target="_blank">${title}</a></h3>
+                            <p>${description}</p>
+                            <a href="${link}" target="_blank">View Details</a>
+                        `;
+
+                        // Append the result to the container
+                        resultsContainer.appendChild(resultDiv);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching RSS feed:', error);
+                    document.getElementById('searchResults').innerHTML = 'There was an error fetching the results.';
+                });
+        }
+
+        // Get the query from sessionStorage
+        const query = sessionStorage.getItem('query');
+        if (query) {
+            fetchRSS(query);  // Fetch and display the RSS feed for the query
+        } else {
+            document.getElementById('searchResults').innerHTML = 'No search query provided.';
+        }
+    </script>
 </body>
 </html>
